update telegram api to 7.2